fix: fixed EmptyTasks component being misaligned and missing margin-top

--- a/src/components/EmptyTask/EmptyTask.module.css
+++ b/src/components/EmptyTask/EmptyTask.module.css
@@ -4,9 +4,19 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  border-top: 1px solid var(--gray-400);
+  border-radius: 8px;
+  margin-top: 1.5rem;
 }
 
 .container p span {
   font-weight: bold;
   display: block;
+}
+
+.clipboard {
+  height: 3.75rem;
+  width: 3.75rem;
+  color: var(--gray-400);
+  margin-top: 4rem;
 }
